--- a/Gmt/templates/views/partials/headerhome.hbs
+++ b/Gmt/templates/views/partials/headerhome.hbs
@@ -3,7 +3,7 @@
 	<div role="navigation" class="navbar navbar-inverse navbar-static-top" style="border-width: 0px;border-radius:0px;background-color:rgba(0,0,0,0.3);border-bottom:0px;">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-4" >
 					<div class="navbar-header">
 						<div class="row">
 							<div class="col-lg-2">
@@ -14,8 +14,8 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<div class="col-lg-10">
-								<a href="/" class="navbar-brand" style="width:100%;height:auto;">
+							<div class="col-lg-10" >
+								<a href="/" class="navbar-brand" style="width:100%;height:auto;outline:none">
 									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 								</a>
 							</div>
@@ -45,7 +45,7 @@
 										</li>
 										{{/each}}
 										<li style="padding-left:35px;">
-											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid white;color:white;font-family:SourceSansPro-Regular;font-size:16.5px;">connect</button>
+											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid white;color:white;font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button>
 										</li>
 										<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
