--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -3,13 +3,11 @@
 <div class="row marginAlign">
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
 
-
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-
 			</ol>
 
 			<!-- Wrapper for slides -->
@@ -26,7 +24,6 @@
 						2
 					</div>
 				</div>
-
 			</div>
 
 			<!-- Controls -->
@@ -50,6 +47,7 @@
 					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#reviews">Reviews</a></li>
 				</ul>
 			</nav>
+
 			<h4 id="about"></h4>
 			<div class="row ">
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -83,10 +81,8 @@
 							<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5  procedure-doc">
 								<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
 								{{{description}}}
-
 							</div>
 							<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
-
 								<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
 								<a href="" id="link" style="">View Profile</a>
 							</div>
@@ -109,10 +105,10 @@
 				</div>
 			</h4>
 
-			<div class="row">
+			<div class="row doc_proc">
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
-				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10" style="border:1px solid #e5e5e5;border-radius:4px; margin-top:20px">
+				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 doc_border" style="">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						{{#each specialities}}
 
