--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,20 +1,18 @@
 <!-- <div class="container"> -->
 {{>header}}
 <div class="row marginAlign ">
-
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
-
 		<div class=" row doc">
-			<div class="row doc_pro">
+			<div class="row doc_profile">
 				<div class="col-lg-1">
 				</div>
 				<div class="col-lg-3">
 					<img src="{{cloudinaryUrl doctor.imageOuter}}">
 				</div>
+
 				<div class="col-lg-5">
 					<h3> {{doctor.name}}</h3>
 					{{{doctor.summary}}}
-
 				</div>
 
 				<div class="col-lg-2" style="padding:0px;">
@@ -27,10 +25,9 @@
 							USD 59
 						</div>
 					</div>
-					<!-- <input type="text" class="form-control" id="text" value="Verified"> -->
-					<!-- <a href="" id="link">Verified</a> -->
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-4">
 				</div>
@@ -79,6 +76,7 @@
 				<div class="col-lg-1">
 				</div>
 			</div> -->
+
 			<h4 id="procedures">
 				<div class="row">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -90,13 +88,13 @@
 					</div>
 				</div>
 			</h4>
+
 			<div class="row doc_proc" style="">
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 				<div class="col-lg-10 doc_border" style="">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						{{#each procedures}}
-
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="headingOne">
 									<h4 class="panel-title">
@@ -122,14 +120,14 @@
 									</div>
 								</div>
 							</div>
-
 						{{/each}}
 					</div>
 				</div>
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 			</div>
-			<h3 style="margin-left: 60px;font-size:18px;">{{{doctor.description}}}</h3>
+
+			<!-- <h3 style="margin-left: 60px;font-size:18px;">{{{doctor.description}}}</h3> -->
 			<h4 id="providers" style="">
 				<div class="row">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -141,6 +139,7 @@
 					</div>
 				</div>
 			</h4>
+
 			{{#each providers}}
 				<div class="row procedure-box ">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -151,13 +150,12 @@
 					<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
 						<h3>{{name}}</h3>
 						<button type="button" class="btn btn-primary btn-md raised" style="outline:none">Know More</button>
-						<!-- <a href=""><p>Know More</p></a> -->
-						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
 					</div>
 					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 					</div>
 				</div>
 			{{/each}}
+
 			<h4 id="reviews" style="">
 				<div class="row">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -168,40 +166,37 @@
 					<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
 					</div>
 				</div>
-
+			</h4>
 		</div>
 	</div>
-	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
 
+	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
 		{{#each speciality}}
 			<h3> {{name}} </h3>
 		{{/each}}
+		<br>
+		<br>
 
-		<br>
-		<br>
-		<div class="form" style="margin-top: -50px;	background-color: #f6f6f6; border: solid 2px rgb(198,198,198);">
-			<h4 style="margin-top:0px;background-color:rgb(198,198,198); padding: 20px 0px;font-family:SourceSansPro-Semibold;font-size:20px;color:white;text-align:center">Request a Consultation</h4>
+		<div class="form frm_doctor" style="margin-top: -50px;	background-color: #f6f6f6;	">
+			<h5 style="">Request a Consultation</h5>
 			<div class="row">
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 				</div>
 				<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-
 					<form method="post" enctype="multipart/form-data">
 						<input type="hidden" name="action" value="second">
 						<textarea class="form-control" rows="5" placeholder="Case info" name="caseinfo" style="margin-top: 15px;border-radius:8px;"></textarea>
-
-						<div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
-
-							<div class="panel panel-default" style="border:none;box-shadow:none;">
+						<div class="panel-group" id="accordion1" class="reports" role="tablist" aria-multiselectable="true">
+							<div class="panel panel-default" style="border: none;box-shadow: none;">
 								<div class="panel-heading" role="tab" id="headingOne" style="margin-top: 10px;padding: 10px 15px;">
 									<a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
-											<div class="row">
+											<div class="row form_accordion">
 												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-													<span style="font-family:SourceSansPro-Regular;font-size:16px;color:rgb(95,95,95);">Medical Reports</span>
+													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;">Medical Reports</span>
 												</div>
-												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95); padding-top:6px; " class="glyphicon glyphicon-chevron-down"></span>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
+													<span style="padding-top: 6px;color: rgb(95,95,95);" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
@@ -214,16 +209,16 @@
 								</div>
 							</div>
 
-							<div class="panel panel-default" style="border:none;box-shadow:none;">
+							<div class="panel panel-default" style="border: none;box-shadow: none;">
 								<div class="panel-heading" role="tab" id="headingTwo" style="margin-top: 5px;padding: 10px 15px;">
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
-												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-													<span style="font-family:SourceSansPro-Regular;font-size:16px;color:rgb(95,95,95);"> Allergies</span>
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title">
+													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;"> Allergies</span>
 												</div>
-												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95); padding-top:3px;" class="glyphicon glyphicon-chevron-down"></span>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
@@ -236,17 +231,17 @@
 								</div>
 							</div>
 
-							<div class="panel panel-default" style="border:none;box-shadow:none;">
+							<div class="panel panel-default" style="border: none;box-shadow: none;">
 								<div class="panel-heading" role="tab" id="headingThree" style="margin-top: 5px;padding: 10px 15px;">
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
-												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-													<span style="font-family:SourceSansPro-Regular;font-size:16px;color:rgb(95,95,95);">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title">
+													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;">
 														Symptoms</span>
 												</div>
-												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95); padding-top:3px;" class="glyphicon glyphicon-chevron-down"></span>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
@@ -258,70 +253,48 @@
 									</div>
 								</div>
 							</div>
-
 						</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 						<div class="form-group">
 							<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:" style="margin-top: -10px;">
 						</div>
-						<div class="form-group row">
+
+						<div class="form-group row form_fields">
 							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-								<input type="text" class="form-control" id="age" placeholder="Age" name="age" style="padding-top: 10px; padding-bottom: 10px; margin-top: 0px;">
+								<input type="text" class="form-control" id="age" placeholder="Age" name="age" style="">
 							</div>
 							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding-top: 10px;">
-								<label for="gender" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px; color:rgb(95,95,95) ">Sex:</label>
+								<label for="gender" class="gender" style="">Sex:</label>
 								<label class="radio-inline">
-									<input type="radio" name="gender" value="Male" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px;">M</label>
+									<input type="radio" name="gender" class="value" value="Male" style="">M</label>
 								<label class="radio-inline">
-									<input type="radio" name="gender" value="Female" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px;">F</label>
+									<input type="radio" name="gender" class="value" value="Female" style="">F</label>
 								<label class="radio-inline">
-									<input type="radio" name="gender" value="Other" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px;">O</label>
+									<input type="radio" name="gender" class="value" value="Other" style="">O</label>
 								<!-- <input type="text" class="form-control" id="gender" placeholder="Gender" name="gender" style="padding-top: 10px; padding-bottom: 10px; margin-top: 0px;"> -->
 							</div>
 						</div>
+
 						<div class="form-group">
 							<input type="email" name="email" class="form-control" id="email" placeholder="Email:">
 						</div>
-						<div class="form-group">
 
+						<div class="form-group">
 							<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
 						</div>
+
 						</br>
 						<div class="row">
 							<div class="col-lg-3"></div>
 							<div class="col-lg-6">
-								<button type="submit" class="btn btn-default" style="font-size:18px;font-family:SourceSansPro-Regular;margin-left: -6px;background-color:rgb(83,200,171);color:white;border-color:rgb(83,200,171);	box-shadow: 0 3px 0 0 rgb(49,120,102);">Get second Opinion</button>
+								<button type="submit" class="btn btn-default doctor_btn" style="">Get second Opinion</button>
 							</div>
 							<div class="col-lg-3"></div>
 						</div>
 					</form>
+
 				</div>
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 				</div>
