--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -11,11 +11,11 @@
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
 				<!-- <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-			style="top: -10px; left: -1130px;right: 0px;"-->
+		    	style="top: -10px; left: -1130px;right: 0px;"-->
 			</ol>
 
 			<!-- Wrapper for slides -->
-			<div class="carousel-inner owl-carousel owl-theme" role="listbox">
+			<div class="carousel-inner" role="listbox">
 				<!-- <div class="carousel-caption " style="top:2%; left:0%;right: 0%;text-align:left;">
 					<div class="row">
 
@@ -33,57 +33,38 @@
 
 					</div>
 				</div> -->
+				<!-- <h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
+					<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
+					<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2> -->
+
 
 				<div class="item active ">
-
 					<img src="../images/GMTHomeCMain.jpg" style="width:100%;height:auto">
-					<div class="carousel-caption">
-
-						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2>
-
-
+					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
 					</div>
-
-
-
 				</div>
 
 				<div class="item">
 					<img src="../images/GMTHomeWellness1.jpg" style="width:100%;height:auto;">
-
-
-					<div class="carousel-caption">
-
-						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2>
-
-
+					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Experience the power of inner healing</h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Choose the ideal location</h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 					</div>
-
 				</div>
+
 				<div class="item">
-					<img src="../images/GMTHomeCFamily1.jpg" style="width:100%;height:auto;">
-					<div class="carousel-caption">
-
-						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">Combine your holiday with a health check up</h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">	Customize your package </h2>
-							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> Explore the world of ayurveda </h2>
-							<!-- <h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-55px;"> 	 </h2> -->
-
-
-
-
-
-
-
+					<img src="../images/GMTHomeC4.jpg" style="width:100%;height:auto;">
+					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Combine your holiday with a health check up</h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Customize your package </h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the world of ayurveda </h2>
 					</div>
 				</div>
-
 			</div>
-
 		</div>
 		<!-- <div class="carousel-caption" style="right: 72px; left:10px; padding-left: 200px; text-align: right;">
 
@@ -116,7 +97,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail   " style="padding-left: 90px;border:none;">
 							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;  border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " align="middle" style="" />
+								<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" class="image  " align="middle" style="" />
 							</div>
 							<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
 							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
@@ -139,10 +120,12 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
 							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
+								<img alt="Goa Medical Travel" src="/images/poo.png" class="image1 " style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
+									display: block;
+									padding: 25px 0 15px 5px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Specialities</h4>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
@@ -159,10 +142,12 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
 							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
+								<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png" class="image2  " style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
+									display: block;
+									padding: 25px 0 15px 5px;">
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Doctors</h4>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
@@ -185,11 +170,31 @@
 			</div>
 		</div>
 	</div>
-	<div class="jumbotron" style="margin-bottom: 0px;">
+	<div class="home2" style="margin-bottom: 0px;">
+		<div class="homeimage" style="position:relative">
+			<img alt="Goa Medical Travel" src="/images/GOAhome.jpg" style="width:100%;height:auto">
+		</div>
+		<h1 style="position:absolute;top:1050px;left:610px;color:white;text-align:center;font-family:SourceSansPro-Semibold;">GOA</h1>
+		<div class="row">
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" >
+				<div class="row" style="position:absolute;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 200px;">
+						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Eat </span>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 180px;">
+						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Pray </span>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 900px;">
+						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Heal </span>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 
-		<h1>Hello, world!</h1>
-		<p>...</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+		</div>
+
+		<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
 	</div>
 	<div class="row index_help">
 		<p style="font-size:32px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
@@ -200,7 +205,7 @@
 
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail null">
-							<img src="/images/ProviderResearch149.png" class="image1"  id="ex1" style="padding-top:18px; padding-bottom:20px;" />
+							<img src="/images/ProviderResearch149.png" class="image1" id="ex1" style="padding-top:18px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
 								<p style="padding-top: 5px;padding-left:25px;">Provider Research</p>
 							</div>
