--- a/Gmt/templates/views/packages.hbs
+++ b/Gmt/templates/views/packages.hbs
@@ -1,9 +1,9 @@
 {{>header}}
-<div class="hero marginAlign ">
+<div class="packagePic marginAlign ">
 	<div class="container">
    <div class="row">
     <div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
-   <div class="row pp">
+   <!-- <div class="row pp">
 					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
 					</div>
 					<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
@@ -13,8 +13,8 @@
 						<p>Choose the right doctor for your treatment</p>
 						<p>Consult a specialist for a second opinion</p>
 					</div>
-				</div>
-				<div class="row">
+				</div> -->
+				<!-- <div class="row">
 					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
 					</div>
     <div class="col-md-10 col-lg-10 col-sm-10 col-xs-12 block">
@@ -38,7 +38,7 @@
 						</form>
 					</div>
 					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-0"></div>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
@@ -47,9 +47,73 @@
 	</div>
 </div>
 
-<div class="row procedure">
+<div class="row procedure" >
 <div class="col-lg-8 border no-padding">
-<div class="row provider-box">
+	<div class="row" style="padding-top: 36px;">
+		<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 no-padding"></div>
+		<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 ">
+			<div class="thumbnail" >
+				<div class="image " style="position: relative; width:100%">
+				<img src="/images/Panchakarma 1.jpg" style="display:block;margin-left:auto;margin-right:auto;width:100%;">
+				<h2 style="position: absolute;top:125px;width: 100%;left:15px;color:white;font-family:SourceSansPro-Semibold;font-size:26px;">Stress Management</h2>
+			</div>
+				<div class="caption">
+        <p style="font-family:SourceSansPro-Regular;color:rgb(53,53,53);text-align:justify;padding-left:7px;padding-right:7px;padding-top:5px;">Alternative medical practices are generally not recognized by the medical community as standard or conventional medical approaches. Alternative medicine includes dietary supplements, megadose vitamins, herbal preparations</p>
+        <p><a href="#" class="btn btn-default" role="button" style="box-shadow: 0 3px 0 0 #b24b4d;background-color: #ff6c6f;border-color: rgb(255,108,111);margin-left:8px;color:white;font-family:SourceSansPro-Regular;margin-top:10px;">Know more</a></p>
+      </div>
+
+      </div>
+		</div>
+		<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 ">
+			<div class="thumbnail" >
+				<div class="image " style="position: relative; width:100%">
+				<img src="/images/Panchakarma 1.jpg" style="display:block;margin-left:auto;margin-right:auto;width:100%;">
+				<h2 style="position: absolute;top:125px;width: 100%;left:15px;color:white;font-family:SourceSansPro-Semibold;font-size:26px;">Stress Management</h2>
+			</div>
+				<div class="caption">
+				<p style="font-family:SourceSansPro-Regular;color:rgb(53,53,53);text-align:justify;padding-left:7px;padding-right:7px;padding-top:5px;">Alternative medical practices are generally not recognized by the medical community as standard or conventional medical approaches. Alternative medicine includes dietary supplements, megadose vitamins, herbal preparations</p>
+				<p><a href="#" class="btn btn-default" role="button" style="box-shadow: 0 3px 0 0 #b24b4d;background-color: #ff6c6f;border-color: rgb(255,108,111);margin-left:8px;color:white;font-family:SourceSansPro-Regular;margin-top:10px;">Know more</a></p>
+			</div>
+
+			</div>
+		</div>
+			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 no-padding"></div>
+	</div>
+
+
+	<div class="row" style="padding-top: 36px;">
+		<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 no-padding"></div>
+		<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 ">
+			<div class="thumbnail" >
+				<div class="image " style="position: relative; width:100%">
+				<img src="/images/Manipal goa.jpg" style="display:block;margin-left:auto;margin-right:auto;width:100%;">
+				<h2 style="position: absolute;top:0px;width: 100%;left:160px;">dgfertger</h2>
+			</div>
+				<div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+
+      </div>
+		</div>
+		<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 ">
+			<div class="thumbnail">
+				<div class="image" style="position: relative; width:100%">
+				<img src="/images/Manipal goa.jpg" style="display:block;margin-left:auto;margin-right:auto;width:100%;">
+				<h2 style="position: absolute;top:0px;width: 100%;left:160px;">dgfertger</h2>
+			</div>
+				<div class="caption">
+	        <h3>Thumbnail label</h3>
+	        <p>...</p>
+	        <p> <a href="#" class="btn btn-default" role="button">Button</a></p>
+	      </div>
+      </div>
+		</div>
+			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 no-padding"></div>
+	</div>
+
+<!-- <div class="row provider-box">
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 		<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
 </div>
@@ -78,12 +142,13 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
 <button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'"
 style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 0 4px 0 0 #b24b4d;margin-top:240px;">Know More</button>
 </div>
-</div></div>
+</div> -->
+</div>
 
 <div class="col-lg-4 no-padding">
-	<h4 class="specialities" style="">Long Term Package</h4>
+	<h4 class="specialities" style="background-color:#C6C6C6;color:white">Packages</h4>
 	<ul class="nav nav-stacked tabs">
-		<li role="presentation" class="active" style="margin-top: 0px;">
+		<li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
 			<a href="/providers/{{key}}" style="">
 				<div class="row">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -92,13 +157,13 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
 							<img src="">
 						</div>
 						<div class="col-lg-9">
-							<span style="SourceSansPro-Regular;font-size:20px;">Recovery</span>
+							<span style="SourceSansPro-Regular;font-size:20px;">Allopathy</span>
 						</div>
 					</div>
 				</a>
 			</li>
 
-      <li role="presentation" class="active" style="margin-top: 0px;">
+      <li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
         <a href="/providers/{{key}}" style="">
           <div class="row">
             <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -113,7 +178,7 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
         </a>
       </li>
 
-			<li role="presentation" class="active" style="margin-top: 0px;">
+			<!-- <li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
         <a href="/providers/{{key}}" style="">
           <div class="row">
             <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -126,9 +191,9 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
             </div>
           </div>
         </a>
-      </li>
+      </li> -->
 
-			<li role="presentation" class="active" style="margin-top: 0px;">
+			<li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
 				<a href="/providers/{{key}}" style="">
 					<div class="row">
 						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -137,15 +202,15 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
 							<img src="">
 						</div>
 						<div class="col-lg-9">
-							<span style="SourceSansPro-Regular;font-size:20px;">Rehabilitation</span>
+							<span style="SourceSansPro-Regular;font-size:20px;">Ayurveda</span>
 						</div>
 					</div>
 				</a>
 			</li>
 
-				<h4 class="specialities" style="">Daily Packages</h4>
+				<h4 class="specialities" style="background-color:#C6C6C6;color:white">Checkups</h4>
 
-			<li role="presentation" class="active" style="margin-top: 0px;">
+			<li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
 				<a href="/providers/{{key}}" style="">
 					<div class="row">
 						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -154,28 +219,13 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
 							<img src="">
 						</div>
 						<div class="col-lg-9">
-							<span style="SourceSansPro-Regular;font-size:20px;">Total Body Checkups</span>
+							<span style="SourceSansPro-Regular;font-size:20px;"> Body Checkups</span>
 						</div>
 					</div>
 				</a>
 			</li>
 
-			<li role="presentation" class="active" style="margin-top: 0px;">
-				<a href="/providers/{{key}}" style="">
-					<div class="row">
-						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-						</div>
-						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-							<img src="">
-						</div>
-						<div class="col-lg-9">
-							<span style="SourceSansPro-Regular;font-size:20px;">Ayurvedic Checkups</span>
-						</div>
-					</div>
-				</a>
-			</li>
-
-			<li role="presentation" class="active" style="margin-top: 0px;">
+			<li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
 				<a href="/providers/{{key}}" style="">
 					<div class="row">
 						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
@@ -185,6 +235,21 @@ style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 
 						</div>
 						<div class="col-lg-9">
 							<span style="SourceSansPro-Regular;font-size:20px;">Dental Checkups</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+			<li role="presentation" class="active" style="margin-top: 0px;padding: 5px 0px;">
+				<a href="/providers/{{key}}" style="">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Ayurveda Checkups</span>
 						</div>
 					</div>
 				</a>
