--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -1,17 +1,31 @@
 <!-- <div class="container"> -->
 {{>header}}
 <div class="picture marginAlign">
+	<div class="row" style="padding-top:205px;">
+		<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
+			<div class="row">
+				<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+				</div>
+				<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:12px;">
+					<span style="font-size:30px;font-family:SourceSansPro-Semibold;color:white">{{{providerCategory}}}</span>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <div class="row procedure">
-
 	<div class="col-lg-8 border no-padding">
 		{{#each providers}}
 			<div class="row provider-box">
-				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-					<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
+				<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
+					<img class="provider-img" width="auto" height="auto" style="" src="../images/Manipal goa.jpg">
 				</div>
-				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 provider-info">
+				<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 provider-info">
+
 					<h3 style="">{{name}}</h3>
+					<input id="input-id" type="number" class="rating" min=1 max=10 step=2 data-size="xs" data-rtl="false" data-readonly="true" showCaption="false">
+
 					{{{summary}}}
 					<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'" style="outline:none;">Know More</button>
 				</div>
@@ -29,7 +43,7 @@
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
 								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-									<img src="">
+									<img src="/images/{{key}}.png" style="width:60%;height:26px;">
 								</div>
 								<div class="col-lg-9">
 									<span>{{name}}</span>
@@ -38,19 +52,18 @@
 						</a>
 					</li>
 				{{else}}
+
 					<li role="presentation" style="margin-top: 0px;">
 						<a href="/providers/{{key}}" style="">
 							<div class="row">
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
 								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-									<img src="">
+									<img src="/images/{{key}}.png" style="width:60%;height:26px;">
 								</div>
 								<div class="col-lg-9">
 									<span>{{name}}</span>
 								</div>
-
-
 							</div>
 						</a>
 					</li>
@@ -58,7 +71,8 @@
 			{{/each}}
 		</ul>
 	</div>
-
 </div>
 <!-- </div> -->
 {{>footer}}
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="/js/star-rating.js"></script>
